<resources>
    <string name="app_name">Hello World</string>
    <string name="name">Name:</string>
    <string name="email_address">Email Address:</string>
    <string name="username">Username:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="david_prismantas">Prismantas, David</string>
    <string name="submit">Submit</string>
    <string name="_4_28_2020">4/28/2020</string>
    <string name="thank_you">Thanks for signing up, </string>
    <string name="back_button">Back</string>
    <string name="sorry_you_re_not_old_enough">Sorry, you\'re not old enough.</string>
    <string name="nothing" />
    <string name="occupation">Occupation:</string>
    <string name="self_description">Describe yourself (max. 80 char)</string>
    <string name="a_picture_of_kermit">A picture of Kermit</string>
    <string name="placeholder">placeholder</string>
    <string name="placeholder2">placeholder2</string>
    <string name="sorry_too_young">Sorry, you\'re too young.</string>
    <string name="placeholder3">placeholder3</string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
    <string name="settings">Settings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="like">Like</string>
    <string name="you_liked">You liked %1$s</string>
    <string name="match_name1">Shmoople</string>
    <string name="match_name2">Jessica</string>
    <string name="match_name3">Ignatius</string>
    <string name="match_descrip1">I hate my name.</string>
    <string name="match_descrip2">I love cats!</string>
    <string name="match_descrip3">This isn\'t where I parked my car!</string>
    <string name="empty_string" />
    <string name="date_formatter_string">yyyy-MM-dd</string>
    <string name="slash">/</string>
    <string name="dash">-</string>
    <string name="daily_reminder_time">Daily Reminder Time:</string>
    <string name="maximum_distance_for_matches_search">Maximum Distance for Matches Search:</string>
    <string name="seeking_male_female_nonbinary">Seeking (Male/Female/Nonbinary):</string>
    <string name="account_visibility_public_private">Account Visibility (public/private):</string>
    <string name="age_range_desired">Age Range Desired:</string>
    <string name="save_settings">Save Settings</string>
    <string name="none">none</string>
    <string name="resume">Resume</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \\\'Off\\\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="network_provider_started_running">Network provider started running</string>
    <string name="network_provider_update">Network provider update</string>
    <string name="settings_saved">Settings saved!</string>
    <string name="sample_database">sample-database</string>
    <string name="image_url">imageUrl</string>
    <string name="lat">lat</string>
    <string name="liked">liked</string>
    <string name="longitude">longitude</string>
    <string name="name_lower_case">name</string>
    <string name="uid">uid</string>
    <string name="percent_s">%s</string>
    <string name="error_reading_matches">\"Error reading matches: \"</string>
</resources>
